<resources>
    <string name="app_name">Gestion-reclamations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connectez_vous_inscrivez_vous">connectez vous/inscrivez-vous</string>
    <string name="se_connecter">se connecter</string>
    <string name="s_inscrire">s\'inscrire</string>
    <string name="renseigner_votre_email">Renseigner votre email</string>
    <string name="renseigner_votre_mot_de_passe">Renseigner votre mot de passe</string>
    <string name="importicon">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="todo">TODO</string>
    <string name="velmm">Velmm</string>
    <string name="visit_velmm_com">Visit : Velmm.com</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="action_settings">Paramêtrage</string>
    <string name="utilisateur_connecte">utilisateur connecté</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="bienvenue_parmi_nous">Bienvenue parmi nous!</string>
    <string name="conseil">Conseil</string>
</resources>