<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="291dp"
        android:layout_height="94dp"
        android:layout_margin="60dp"
        android:padding="30dp"
        android:text="@string/connectez_vous_inscrivez_vous" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        tools:context=".HomeActivity">

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/se_connecter"
            style="?android:attr/buttonBarButtonStyle" />



        <Button
            android:id="@+id/buttonsignup"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/s_inscrire"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/renseigner_votre_email"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_margin="10dp"
        android:hint="@string/renseigner_votre_mot_de_passe"
        android:inputType="textPassword"
        android:autofillHints="" />

</LinearLayout>